--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,20 @@
-<h1>Test</h1>
+<div class="mt-4">
+    <div class="row">
+        {{#each comics}}
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card card-comic-item">
+                <a href="/comics/{{this.slug}}">
+                    <img class="card-img-top card-img-item" src="{{this.image}}" alt="{{this.name}}">
+                </a>
+                <div class="card-body">
+                    <a href="/comics/{{this.slug}}">
+                        <h5 class="card-title">{{this.name}}</h5>
+                    </a>
+                    <p class="card-text card-text-item">{{this.descriptions}}</p>
+                    <a href="/comics/{{this.slug}}" class="btn btn-primary">Đọc truyện</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
